2006-12-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSArray+Utilities.m: new extension module to
	NSArray.
	([NSArray -stringsWithFormat:format]): new method that returns
	formatted occurences of the strings stored in the array.

	* SoObjects/SOGo/SOGoDAVRendererTypes.m ([SOGoDAVSet
	+davSetWithArray:newValuesofValuesTaggedAs:newValueTag]): a new
	subclass module of SoWebDAVValue that supports collections of
	properties of the same type.

2006-11-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-lookupFolder:ofClassNamed:inContext:]): added the ability to
	configure the name of the SOGoDraftFolders with the ud var
	"SOGoDraftsFolderName".

2006-11-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-userTimeZone:username]): new method that returns the timezone for
	the specified user depending on his preferences and the server
	defaults

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-stringForData:partInfo:]): take the encoding into account and
	translate the text to "normal" before processing the charset data.

2006-11-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/generic.js: the progress indicator is on
	when loading the page so we turn it off, and we turn it back on
	whenever we switch to another module...

	* UI/WebServerResources/SchedulerUI.js: make sure the day view
	synchronization mechanism works everywhere.

	* UI/WebServerResources/generic.js: the log window is not only
	visible when UIxDebugEnabled is set.

	* UI/WebServerResources/SchedulerUI.js: the month overview's day
	cells are now initialized with the DOM event interface methods
	instead of with html attributes.

	* UI/Templates/MailerUI/UIxMailView.wox: don't display useless
	headers (should be made configurable at some point)...

	* OGoContentStore/sql/generate-folderinfo-sql-for-users.sh: drop